# ECE1724-Performant-Software-Systems-with-Rust

./: .gitmodules  README.md
assignments/Reversi-Board-Game/: Cargo.toml  assignment_1.md
assignments/Reversi-Board-Game/src/: lib.rs  main.rs
assignments/Reversi-Board-Game/tests/: lib_test.rs  result.txt  test_game.sh
assignments/Reversi-Board-Game/tests/inputs/: in1829.txt  in51.txt  in54.txt  in57.txt  in68.txt
assignments/Reversi-Board-Game/tests/outputs/: out1829.txt  out51.txt  out54.txt  out57.txt  out68.txt
assignments/Reversi-Board-Game/tests/outputs_actual/: out1829.txt  out33.txt  out40.txt  out47.txt  out51.txt  out54.txt  out57.txt  out68.txt
assignments/Search-Utility/: compare.txt
assignments/Search-Utility/outputs/: output_7.txt
assignments/Web-Client/: Cargo.toml  assignment_3.md  run_all_and_compare.sh
assignments/Web-Client/outputs/: output_1.txt  output_10.txt  output_4.txt  output_5.txt  output_6.txt  output_9.txt
assignments/Web-Client/src/: main.rs
assignments/Web-Server/: Cargo.toml  assignment_4.md
assignments/Web-Server/src/: main.rs
assignments/Web-Server/test/: README.md  add_songs.py  add_songs_asyncio.py  consts.py  measure_queries.py  measure_queries_asyncio.py  pyproject.toml
