[package]
name = "grep"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1.8", features = ["derive"] } # Parses command-line arguments and options for utility
walkdir = "2.3" # Enables recursive directory traversal for searching through directories and subdirectories
colored = "2.0" # Provides colored terminal output to highlight matched text
regex = "1.7" # Performs pattern matching with regular expressions, supporting features like case-insensitive search

[dev-dependencies]
tempfile = "3.2" # for unit tests