[package]
name = "web-server"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp = "0.3"
dashmap = "5.5"
tokio = { version = "1", features = ["full"] }
rayon = "1.5"

[profile.release]
opt-level = 3       # Optimize for speed
lto = "fat"         # Enable Link-Time Optimization for maximum performance
codegen-units = 1   # Single code generation unit to improve optimization
panic = "abort"     # Reduce overhead by not generating backtraces